css/style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	background: url(../images/fondo3.jpg);
	background-size: cover; 
	background-repeat: no-repeat;
}
  	/*background-image: radial-gradient(ellipse 100% 850px at right 250px, #44B8BA, #E1D9CC 85%, #E3AEBE);
  	background-position: 0 75px; 
}


.gradient {
	background: linear-gradient(140deg, rgba(227, 174, 190, 0.8), transparent 50%);
	height: 850px;
}

 Note: the gradient is far from perfect, but it is the closest I could get. 
I think the background-image works just fine but it would take too much time to 
load in mobile devices and in screens larger than 1240x850 the image quality 
is not good enough, so I think I'll fix that with medias-queries */

.titulo {
	display: flex;
	justify-content: center; 
}

.titulo h1 {
	font-size: 32px; 
	font-family: "Roboto"; 
	font-weight: 400;
	color: white;
	margin: 0px;
	margin-top: 45px;
}

.row.custom {
	background: #00BCD4;
	height: 74px;
	margin-top: 0px;
}

.custom h2 {
	font-size: 16px; 
	font-family: "Roboto";
	font-weight: 500px; 
	color: #FFFFFF;
	display: inline;
	position: relative;
	top: 28px;
	left: 56px;
	margin: 0;
}

.custom img {
	width: 18px;
	height: auto;
	position: relative;
	top: 25px;
	left: 16px;
}

.form {
	width: 480px;
	height: 500px;
	background-color: white; 
	margin-top: 55px;
	box-shadow: 0px 15px 25px rgba(0,0,0,0.24), 2px 15px 30px rgba(0,0,0,0.18); 
	border-radius: 2px;
}

.form:hover {
  	box-shadow: 0 15px 35px rgba(0,0,0,0.40), 0 15px 45px rgba(0,0,0,0.28), 0 15px 55px rgba(0,0,0,0.15);
  	border: 1px grey solid;
  	border-radius: 2px;
}

.unicornio {
	display: flex;
	justify-content: center; 
}

/* this is the css that works with the inputs I did prior to the use of Materialize.  


.estiloInput {
	position: relative;
	display: flex;
	justify-content: center; 
	height: 66px;
}

.estiloInput label {
    color: rgba(0,0,0,0.5);
    position: absolute;
    top: 40px;
    left: 75px;
    font-size: 16px;
    cursor: text;
    -webkit-transition: .2s ease-out;
    -moz-transition: .2s ease-out;
    -o-transition: .2s ease-out;
    -ms-transition: .2s ease-out;
    transition: .2s ease-out;
    font-family: "roboto"; 
    font-weight: 400; 
}



input {
    background-color: transparent;
    border: none;
    border-bottom: 1px solid #ccc;
    outline: 0;
    height: 35px;
    width: 330px;
    font-size: 16px;
    box-shadow: none;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    transition: all .3s;
    margin-top: 30px;
    font-weight: 500; 
    color: black;
}

.estiloInput label.active {
    font-size: 12px;
    -webkit-transform: translateY(-60%);
    -moz-transform: translateY(-60%);
    -ms-transform: translateY(-60%);
    -o-transform: translateY(-60%);
    transform: translateY(-24px); 
}

*/
.modified {
	display: flex;
	justify-content: center; 
}

input#input {
	margin: 0px;
	width: 330px;
	font-size: 16px;
	font-family: "roboto";
	font-weight: 400; 
	border-bottom: 1px solid #DBDBDB;
}

input#inputmail {
	margin: 0px;
	width: 330px;
	font-size: 16px;
	font-family: "roboto";
	font-weight: 400;
	border-bottom: 1px solid #DBDBDB;
}

.input-field {
	width: 330px;
	height: 70px;
	margin: 0;
	padding: 0;
	padding-bottom: 24px;
}

.input-field label.label {
	position: absolute;
	top: 0;
	width: 330px;
	height: 70px;
	font-size: 16px;
	font-family: "Roboto"; 
}

.input-field label.label.active {
	height: 57.5px;
	position: absolute;
	bottom: 0;
	transform: translateY(-10px) scale(0.75);
	color: #AAAAAA; 
}

.row {
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    margin-bottom: 0px;
}

.myClass {
	width: 228px;
	margin-left: 76px;
}

.check p {
	width: 330px;

}

.check p label.align {
	padding-left: 65px;
}

[type="checkbox"].filled-in:checked+label:after {
	border-color: #80DEEA;
	background-color: #80DEEA; 
	

}

[type="checkbox"].filled-in:not(:checked)+label:after {
   
    border: 2px solid #DBDBDB;
   
}



.scale {
	display: flex;
	justify-content: space-between;
}

.scale label {
	font-size: 8px;
	margin: 0;
	padding: 0; 
}

input[type=range] {
	height: 5px;
	margin: 0px;
	border: 0px;
}

input[type=range] {
  -webkit-appearance: none;
}

input[type=range]::-webkit-slider-runnable-track {
  height: 3px;
  background: #DBDBDB;
  border: none;
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: none;
  height: 14px;
  width: 14px;
  border-radius: 50%;
  background-color: #80DEEA;
  -webkit-transform-origin: 50% 50%;
          transform-origin: 50% 50%;
  margin: -5px 0 0 0;
  -webkit-transition: .3s;
  transition: .3s;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: #DBDBDB;
}

input[type=range] {
  /* fix for FF unable to apply focus style bug  */
  border: 1px solid white;
  /*required for proper track sizing in FF*/
}

input[type=range]::-moz-range-track {
  height: 3px;
  background: red;
  border: none;
}

input[type=range]::-moz-range-thumb {
  border: none;
  height: 14px;
  width: 14px;
  border-radius: 50%;
  background: red;
  margin-top: -5px;
}

input[type=range]:-moz-focusring {
  outline: 1px solid #fff;
  outline-offset: -1px;
}

input[type=range]:focus::-moz-range-track {
  background: red;
}

input[type=range]::-ms-track {
  height: 3px;
  background: red;
  border-color: transparent;
  border-width: 6px 0;
  /*remove default tick marks*/
  color: transparent;
}

input[type=range]::-ms-fill-lower {
  background: #777;
}

input[type=range]::-ms-fill-upper {
  background: #ddd;
}

input[type=range]::-ms-thumb {
  border: none;
  height: 14px;
  width: 14px;
  border-radius: 50%;
  background: red;
}

input[type=range]:focus::-ms-fill-lower {
  background: red;
}

input[type=range]:focus::-ms-fill-upper {
  background: red;
}


input:not([type]):focus:not([readonly]) + label,
input[type=text]:not(.browser-default):focus:not([readonly]) + label,
input[type=password]:not(.browser-default):focus:not([readonly]) + label,
input[type=email]:not(.browser-default):focus:not([readonly]) + label,
input[type=url]:not(.browser-default):focus:not([readonly]) + label,
input[type=time]:not(.browser-default):focus:not([readonly]) + label,
input[type=date]:not(.browser-default):focus:not([readonly]) + label,
input[type=datetime]:not(.browser-default):focus:not([readonly]) + label,
input[type=datetime-local]:not(.browser-default):focus:not([readonly]) + label,
input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
input[type=number]:not(.browser-default):focus:not([readonly]) + label,
input[type=search]:not(.browser-default):focus:not([readonly]) + label,
textarea.materialize-textarea:focus:not([readonly]) + label {
  color: #AAAAAA;
}


input:not([type]):focus:not([readonly]),
input[type=text]:not(.browser-default):focus:not([readonly]),
input[type=password]:not(.browser-default):focus:not([readonly]),
input[type=email]:not(.browser-default):focus:not([readonly]),
input[type=url]:not(.browser-default):focus:not([readonly]),
input[type=time]:not(.browser-default):focus:not([readonly]),
input[type=date]:not(.browser-default):focus:not([readonly]),
input[type=datetime]:not(.browser-default):focus:not([readonly]),
input[type=datetime-local]:not(.browser-default):focus:not([readonly]),
input[type=tel]:not(.browser-default):focus:not([readonly]),
input[type=number]:not(.browser-default):focus:not([readonly]),
input[type=search]:not(.browser-default):focus:not([readonly]),
textarea.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid #DBDBDB;
  -webkit-box-shadow: 0 0 0 0;
          box-shadow: 0 0 0 0;
}

/*.input-field label:not(.label-icon).active {

}*/

.btn.myBtn {
	background-color: #00ACC1; 
}

